fix: hide code copy button on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -134,6 +134,7 @@ article img {
     }
 
     div.copy button {
+      @apply hidden sm:flex;
       --code-background: var(--theme-background);
     }
 
